add: Created new website notice pattern New pattern uses #sitenotice

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -88,6 +88,8 @@ block content
 						li
 							a(href="features/section-notice.html") Section Notices
 						li
+							a(href="features/site-notice.html") Website Notice
+						li
 							a(href="features/cookie-monster.html") Cookie Monster
 						li
 							a(href="features/browser-warning.html") Browser warning
