--- a/libs/template/sidebar-features.jade
+++ b/libs/template/sidebar-features.jade
@@ -1,7 +1,7 @@
 - var section = "Features"
 +sidebar([
-	//{href: "cards.html", title: "Cards"},
     {href: "section-notice.html", title: "Section Notices"},
+    {href: "site-notice.html", title: "Website Notice"},
     {href: "cookie-monster.html", title: "Cookie Monster"},
     {href: "browser-warning.html", title: "Browser warning"},
     {href: "extent.html", title: "Extent Switcher"}
