fix: Added copyright at the end of #main so it works on old style pages

--- a/libs/base/print.less
+++ b/libs/base/print.less
@@ -3,8 +3,7 @@
  */
 
 // Print notice
-.articleContent:after {
-	//.callout--example;
+#main:after {
 	display: block;
 	padding-top: 1rem;
 	font-size: unit(@font-size-small, em);
