--- a/libs/jade/dev/blog/blog-home-1.jade
+++ b/libs/jade/dev/blog/blog-home-1.jade
@@ -1,24 +1,10 @@
 block settings
 	- var title = "Citizens Advice digital blog"
 	- var sidebar = true
-	- var toolbars = false
-	//- var cookiemonster = true
-	- var mockup = true
+	- var blog = true
+	- var nofooter = true
 
-extends /template/nav-v1.jade
-
-//block breadcrumbs
-	+breadcrumbs([
-		{title: "Home"}])
-	//.row
-		.span12
-			.blog-panel-intro
-				h1 Our users, this means all of you
-				p.small #[a(href="#") Cat Togher] on February 5, 2016 in #[a(href="#") Casebook], #[a(href="#") Design]
-				p No 2 local Citizens Advice are the same. They don’t represent the same people, they have different funding and they are different sizes. That’s why we’ve been working really hard to get the whole network signed up and involved in the digital project.
-
-				a(href="#" style="border-bottom:none;")
-					button.btn.btn-secondary.right-button-icon(type="button") Read full article
+extends /template/template-site.jade
 
 block sidebar
 	include /template/sidebar-blog-v1.jade
