--- a/libs/jade/dev/blog/blog-search.jade
+++ b/libs/jade/dev/blog/blog-search.jade
@@ -1,12 +1,11 @@
 block settings
 	- var title = "Search results"
 	- var sidebar = true
-	- var toolbars = false
-	- var mockup = false
 	- var dir = "../../"
 	- var blog = true
+	- var nofooter = true
 
-extends /template/template.jade
+extends /template/template-site.jade
 
 block sidebar
 	include /template/sidebar-blog.jade
