--- a/libs/jade/dev/blog/blog-team-profile.jade
+++ b/libs/jade/dev/blog/blog-team-profile.jade
@@ -1,18 +1,11 @@
 block settings
 	- var title = "That Person"
 	- var sidebar = true
-	- var toolbars = false
-	//- var cookiemonster = true
-	- var mockup = false
 	- var dir = "../../"
 	- var blog = true
+	- var nofooter = true
 
-extends /template/template.jade
-
-//block breadcrumbs
-	+breadcrumbs([
-		{title: "Home", href: "blog-home.html"},
-		{title: "That person"}])
+extends /template/template-site.jade
 
 block sidebar
 	include /template/sidebar-blog.jade
