--- a/libs/modules/landing.less
+++ b/libs/modules/landing.less
@@ -8,8 +8,25 @@
 	clear: both;
 }
 
+.fullwidth-aqua {
+	background-color: @aqua-light;
+	clear: both;
+}
+
 .fullwidth-content {
     .limit-width(@breakpoint-lg);
     margin: 0 auto;
-    padding: @box-spacing-vertical @box-spacing-horizontal @box-spacing-vertical*2 @box-spacing-horizontal;
+    padding: @box-spacing-vertical*2 @box-spacing-horizontal;
+    & >:first-child {
+    	margin-top: 0;
+    }
+    & >:last-child {
+    	margin-bottom: 0;
+    }
+    & > *[class^="col"] > *:first-child {
+    	margin-top: 0;
+    }
+    & > *[class^="col"] > *:last-child {
+    	margin-bottom: 0;
+    }
 }
