--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -186,6 +186,19 @@ blockquote,
     }
 }
 
+.well--outline--warning {
+    .dap-panel;
+    .callout (
+        @white,
+        @callout-border: @red
+    );
+    .callout--border;
+    border-radius: @form-border-radius;
+    h2, h3 {
+        color: @red
+    }
+}
+
 /************************************************************************
  * Side panels - extending to style the panels that will run down the left-hand menu.
  */
