fix: Fixed the syntax in speech-line examples that was breaking it when used elsewhere

--- a/libs/jade/branding/speech-line.jade
+++ b/libs/jade/branding/speech-line.jade
@@ -42,7 +42,8 @@ block content
 					| &lt;div class="speech-lines"&gt;
 					| 	&lt;h3&gt;An example of a quote in a report when the speech line should be used instead of the speech bubble&lt;/h3&gt;
 					| 	&lt;p&gt;Quote from William Shakespear 1690&lt;/p&gt;
-					| &lt;div class="box-speech-line"&gt;&lt;/div&gt;
+					| 	&lt;div class="box-speech-line"&gt;&lt;/div&gt;
+					| &lt;/div&gt;
 
 
 			.example-box-plain(style="margin-top:100px; !important")
@@ -59,7 +60,8 @@ block content
 					| &lt;div class="speech-lines"&gt;
 					| 	&lt;h3&gt;An example of a quote in a report when the speech line should be used instead of the speech bubble&lt;/h3&gt;
 					| 	&lt;p&gt;Quote from William Shakespear 1690&lt;/p&gt;
-					| &lt;div class="box-speech-line"&gt;&lt;/div&gt;
+					| 	&lt;div class="box-speech-line"&gt;&lt;/div&gt;
+					| &lt;/div&gt;
 
 			.example-box-plain(style="margin-top:100px; !important")
 				label(style="margin-bottom:1rem;") Speech line
@@ -75,4 +77,5 @@ block content
 					| &lt;div class="speech-lines"&gt;
 					| 	&lt;h3&gt;An example of a quote in a report when the speech line should be used instead of the speech bubble&lt;/h3&gt;
 					| 	&lt;p&gt;Quote from William Shakespear 1690&lt;/p&gt;
-					| &lt;div class="box-speech-line"&gt;&lt;/div&gt;
+					| 	&lt;div class="box-speech-line"&gt;&lt;/div&gt;
+					| &lt;/div&gt;
