add: initial commit dealing with your debt journey

--- a/libs/jade/dev/debt/prioritise-debts-results-1.jade
+++ b/libs/jade/dev/debt/prioritise-debts-results-1.jade
@@ -18,7 +18,7 @@ block sidebar
 block content
 	.articleContent
 		p The list of debts you selected has been prioritised into order of importance based on the severity of consequences.
-		p We still recommend you look through each individual debt and follow the steps involved.
+		//p We still recommend you look through each individual debt and follow the steps involved.
 
 		table
 			thead
@@ -35,10 +35,6 @@ block content
 				tr
 					td Court fines
 					td Talk to the court fines officer straight away
-
-
-
-		table
 			thead
 				tr
 					th(scope="col") Non-Priority Debt
