--- a/libs/jade/dev/debt/prioritise-debts-results.jade
+++ b/libs/jade/dev/debt/prioritise-debts-results.jade
@@ -18,7 +18,7 @@ block sidebar
 block content
 	.articleContent
 		p The list of debts you selected has been prioritised into order of importance based on the severity of consequences.
-		p We still recommend you look through each individual debt and follow the steps involved.
+		//p We still recommend you look through each individual debt and follow the steps involved.
 
 	h2 Priority debt
 	.well--outline--warning
