--- a/libs/modules/main-nav.less
+++ b/libs/modules/main-nav.less
@@ -156,6 +156,7 @@ html[lang="en-SCT"] .main-nav {
         list-style: none;
         margin-left: 0;
         padding-left: 0;
+        margin-top: 1em;
     }
 
     .view-all {
