fix: Changed speech line syntax and examples

--- a/libs/jade/branding/speech-line.jade
+++ b/libs/jade/branding/speech-line.jade
@@ -22,60 +22,48 @@ block content
 			ul
 				li use the same colour text and line
 				li try not to use more than 1 speech line per page.
-			.speech-lines
-				h3 An example of a quote in a report when the speech line should be used instead of the speech bubble
-				p Quote from William Shakespear 1690
-				.box-speech-line
 
-
-			.example-box-plain(style="margin-top:100px; !important")
-				label(style="margin-bottom:1rem;") Speech line
+			.example-box-plain
 				.row
 					.span12
 						.speech-lines
-							h3 An example of a quote in a report when the speech line should be used instead of the speech bubble
-							p Quote from William Shakespear 1690
+							h4 An example of a quote in a report when the speech line should be used instead of the speech bubble
+							p.cite Quote from William Shakespear 1690
 							.box-speech-line
-
 			pre
 				code.language-html
 					| &lt;div class="speech-lines"&gt;
-					| 	&lt;h3&gt;An example of a quote in a report when the speech line should be used instead of the speech bubble&lt;/h3&gt;
-					| 	&lt;p&gt;Quote from William Shakespear 1690&lt;/p&gt;
+					| 	&lt;h4&gt;An example of a quote in a report when the speech line should be used instead of the speech bubble&lt;/h4&gt;
+					| 	&lt;p class="cite"&gt;Quote from William Shakespear 1690&lt;/p&gt;
 					| 	&lt;div class="box-speech-line"&gt;&lt;/div&gt;
 					| &lt;/div&gt;
 
-
-			.example-box-plain(style="margin-top:100px; !important")
-				label(style="margin-bottom:1rem;") Speech line
+			.example-box-plain
 				.row
 					.span12
 						.speech-lines-purple
-							h3 An example of a quote in a report when the speech line should be used instead of the speech bubble
-							p Quote from William Shakespear 1690
-							.box-speech-line-purple
-
+							h4 An example of a quote in a report when the speech line should be used instead of the speech bubble
+							p.cite Quote from William Shakespear 1690
+							.box-speech-line
 			pre
 				code.language-html
-					| &lt;div class="speech-lines"&gt;
-					| 	&lt;h3&gt;An example of a quote in a report when the speech line should be used instead of the speech bubble&lt;/h3&gt;
-					| 	&lt;p&gt;Quote from William Shakespear 1690&lt;/p&gt;
+					| &lt;div class="speech-lines-purple"&gt;
+					| 	&lt;h4&gt;An example of a quote in a report when the speech line should be used instead of the speech bubble&lt;/h4&gt;
+					| 	&lt;p class="cite"&gt;Quote from William Shakespear 1690&lt;/p&gt;
 					| 	&lt;div class="box-speech-line"&gt;&lt;/div&gt;
 					| &lt;/div&gt;
 
-			.example-box-plain(style="margin-top:100px; !important")
-				label(style="margin-bottom:1rem;") Speech line
+			.example-box-plain
 				.row
 					.span12
 						.speech-lines-teal
-							h3 An example of a quote in a report when the speech line should be used instead of the speech bubble
-							p Quote from William Shakespear 1690
-							.box-speech-line-teal
-
+							h4 An example of a quote in a report when the speech line should be used instead of the speech bubble
+							p.cite Quote from William Shakespear 1690
+							.box-speech-line
 			pre
 				code.language-html
-					| &lt;div class="speech-lines"&gt;
-					| 	&lt;h3&gt;An example of a quote in a report when the speech line should be used instead of the speech bubble&lt;/h3&gt;
-					| 	&lt;p&gt;Quote from William Shakespear 1690&lt;/p&gt;
+					| &lt;div class="speech-lines-teal"&gt;
+					| 	&lt;h4&gt;An example of a quote in a report when the speech line should be used instead of the speech bubble&lt;/h4&gt;
+					| 	&lt;p class="cite"&gt;Quote from William Shakespear 1690&lt;/p&gt;
 					| 	&lt;div class="box-speech-line"&gt;&lt;/div&gt;
 					| &lt;/div&gt;
