dev: update blocklink style to include --backlinks and update for testing

--- a/libs/jade/dev/debt/get-help-with-your-debts-1.jade
+++ b/libs/jade/dev/debt/get-help-with-your-debts-1.jade
@@ -24,7 +24,7 @@ block content
 			li what you can deal with yourself
 			li what you need might need specialist help with - and show you where to get this help
 		p You can come back to this guide as you complete each step and are ready to move onto the next one.
-		.callout--alert
+		.callout--warning
 			p If you've received court papers, are facing eviction or are expecting bailiffs (or sheriff officers in Scotland) contact your local Citizens Advice immediately in England and Wales, Scotland or Northern Ireland.
 
 		a.blockLinks(href="#{dir}dev/debt/steps/step-1.html") Step 1 - Gather information for each debt
