--- a/libs/jade/dev/debt/get-help-with-your-debts.jade
+++ b/libs/jade/dev/debt/get-help-with-your-debts.jade
@@ -24,7 +24,7 @@ block content
 			li what you can deal with yourself
 			li what you need might need specialist help with - and show you where to get this help
 		p You can come back to this guide as you complete each step and are ready to move onto the next one.
-		.callout--alert
+		.callout--warning
 			p Contact your local Citizens Advice immediately in England and Wales, Scotland or Northern Ireland if you've received court papers, are facing eviction or are expecting bailiffs (or sheriff officers in Scotland).
 		h2 Step 1 - Gather information for each debt
 		p Collect together all the letters and emails you’ve had from your creditors and originals or copies of any credit agreements you’ve signed. If you don’t have an up-to-date statement from a creditor, you can ask them for one. This should tell you all the payments you’ve made and what’s left to pay.
@@ -57,7 +57,7 @@ block content
 
 		h4 If you can’t agree with the creditor
 		p You can get help from a specialist debt adviser if you’re finding it difficult to come to an agreement with a creditor. 
-		h2 Non-priority debts
+		h3 Non-priority debts
 		p Once you’ve made new arrangements for any priority debts, you can move on to non-priority debts. 
 		p Use the #[a(href="#") budgeting tool] if you need to recalculate your incomings and outgoings after setting up new payments for priority debts.
 		p You’ll need to use the money you have left each week or month to pay off the non-priority debts. 
