--- a/libs/jade/dev/debt/steps/step-1.jade
+++ b/libs/jade/dev/debt/steps/step-1.jade
@@ -29,7 +29,7 @@ block content
 		p Make a list of all your creditors, and how much you owe each one. This will include things like Council Tax and mortgage or rent arrears, as well as credit cards or loan payments.
 
 		a.blockLinks(href="#{dir}dev/debt/steps/step-2.html") Step 2 - Work out which debts are a priority
-		a.blockLinks(href="#{dir}dev/debt/get-help-with-your-debts-1.html") Get help with your debts
+		a.blockLinks.blocklinks--back(href="#{dir}dev/debt/get-help-with-your-debts-1.html") Get help with your debts
 
 		//.callout--related
 			h3 Get more help
