--- a/libs/jade/dev/debt/steps/step-2.jade
+++ b/libs/jade/dev/debt/steps/step-2.jade
@@ -108,7 +108,7 @@ block content
 
 
 		a.blockLinks(href="#{dir}dev/debt/steps/step-3.html") Step 3 - Work out what you can afford to pay
-		a.blockLinks(href="#{dir}dev/debt/get-help-with-your-debts-1.html") Get help with your debts
+		a.blockLinks.blocklinks--back(href="#{dir}dev/debt/get-help-with-your-debts-1.html") Get help with your debts
 
 		//.callout--related
 			h3 Get more help
