--- a/libs/jade/dev/debt/steps/step-3.jade
+++ b/libs/jade/dev/debt/steps/step-3.jade
@@ -33,7 +33,7 @@ block content
 		p Get help from a free debt specialist if you’ve worked out your budget and have little or no money spare each month. A specialist can explain your options and will help you find a solution.
 
 		a.blockLinks(href="#{dir}dev/debt/steps/step-4.html") Step 4 - Contact your creditors
-		a.blockLinks(href="#{dir}dev/debt/get-help-with-your-debts-1.html") Get help with your debts
+		a.blockLinks.blocklinks--back(href="#{dir}dev/debt/get-help-with-your-debts-1.html") Get help with your debts
 
 		//.callout--related
 			h3 Get more help
