--- a/libs/jade/dev/debt/steps/step-4.jade
+++ b/libs/jade/dev/debt/steps/step-4.jade
@@ -47,7 +47,7 @@ block content
 		p Contacting your creditors can be a hard thing to do - if you need help, contact Citizens Advice first - they can talk you through the process.  
 
 		a.blockLinks(href="#{dir}dev/debt/steps/after-your-budget.html") After you’ve worked out your budget
-		a.blockLinks(href="#{dir}dev/debt/get-help-with-your-debts-1.html") Get help with your debts
+		a.blockLinks.blocklinks--back(href="#{dir}dev/debt/get-help-with-your-debts-1.html") Get help with your debts
 
 		//.callout--related
 			h3 Get more help
