--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -152,7 +152,20 @@
     &.i-search {
         .btn-icon(@i-search,@color:@heritage-blue);
     }
+
+    // Changing the blocklink icon
+    &.blocklinks--back {
+        .btn-icon(@i-left,@color:@heritage-blue);
+        text-align: left;
+        padding-left: 2.5em;
+        &:after {
+            left: 1rem;
+            text-align: left;
+        }
+    }
+
 }
+
 
 // Used for the summary box at the top of long content pages
 .steps {
