fix: Changed the overflow inline on sticky box example, as overflow hidden causes breaks sticky on webkit

--- a/libs/jade/modules/sticky.jade
+++ b/libs/jade/modules/sticky.jade
@@ -19,7 +19,7 @@ block content
 		div
 			p A sticky box contains important information. It stays at the top when the user scrolls down and is always visible.
 
-			.example-box-plain(style="height:800px")
+			.example-box-plain(style="height:1000px;overflow:initial")
 				.box--sticky.js-make-sticky
 					p This is OISC level 1 advice - you’re qualified to advise on this subject.
 			pre
