add: content change debt mockup

--- a/libs/jade/dev/debt/steps/step-1.jade
+++ b/libs/jade/dev/debt/steps/step-1.jade
@@ -28,6 +28,8 @@ block content
 		p Collect together all the letters and emails you’ve had from your creditors and originals or copies of any credit agreements you’ve signed. If you don’t have an up-to-date statement from a creditor, you can ask them for one. This should tell you all the payments you’ve made and what’s left to pay.
 		p Make a list of all your creditors, and how much you owe each one. This will include things like Council Tax and mortgage or rent arrears, as well as credit cards or loan payments.
 
+		p Use #[a.a-pdf-doc(href="#") this as a template to list your debts].
+
 		a.blockLinks(href="#{dir}dev/debt/steps/step-2.html") Step 2 - Work out which debts are a priority
 		a.blockLinks.blocklinks--back(href="#{dir}dev/debt/get-help-with-your-debts-1.html") Get help with your debts
 
