--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -10,7 +10,7 @@ block breadcrumbs
 block content
 	// NEW INDEX
 	.articleContent
-		.newrow
+		.flex-row
 			.span6-sm
 
 				h2(style="margin-top: 0;") Getting started
@@ -31,91 +31,89 @@ block content
 					//li
 						a.a-external(href="#") Brand guidelines
 
-		.newrow
+		.flex-row
 			.span8-md
 				h2 Digital design elements
 				p This is a guide to demonstrate elements such as layout, typography, forms, buttons and icons.
-		.newrow
-			.index-row-1
-				.index-col
-					h3#Styles(style="margin-top: 0;") Styles
-					ul
-						li
-							a(href="styles/typography.html") Typography
-						li
-							a(href="styles/colours.html") Colours
-						li
-							a(href="styles/icons.html") Icons
-						li
-							a(href="styles/tables.html") Tables
-						li
-							a(href="styles/charts.html") Charts
+		.flex-row
+			.col-md-4.col-sm-6
+				h3#Styles(style="margin-top: 0;") Styles
+				ul
+					li
+						a(href="styles/typography.html") Typography
+					li
+						a(href="styles/colours.html") Colours
+					li
+						a(href="styles/icons.html") Icons
+					li
+						a(href="styles/tables.html") Tables
+					li
+						a(href="styles/charts.html") Charts
 
-				.index-col
-					h3#Forms(style="margin-top: 0;") Forms
-					ul
-						li
-							a(href="forms/buttons.html") Buttons
-						li
-							a(href="forms/fields.html") Fields
-						li
-							a(href="forms/field-groups.html") Field groups
-						li
-							a(href="forms/validation.html") Form validation
-						li
-							a(href="forms/clipboard.html") Copy to clipboard
+			.col-md-4.col-sm-6
+				h3#Forms(style="margin-top: 0;") Forms
+				ul
+					li
+						a(href="forms/buttons.html") Buttons
+					li
+						a(href="forms/fields.html") Fields
+					li
+						a(href="forms/field-groups.html") Field groups
+					li
+						a(href="forms/validation.html") Form validation
+					li
+						a(href="forms/clipboard.html") Copy to clipboard
 
-				.index-col
-					h3#Modules(style="margin-top: 0;") Modules
-					ul
-						li
-							a(href="modules/callout.html") Callout
-						li
-							a(href="modules/revealable.html") Revealable
-						//li
-							a(href="modules/section-notice-dev.html") Section Notice Development
-						li
-							a(href="modules/toolbar.html") Content toolbar
-						li
-							a(href="modules/sticky.html") Sticky box
-						//li
-							a(href="modules/overlay.html") Modal/Overlay
+			.col-md-4.col-sm-6
+				h3#Modules(style="margin-top: 0;") Modules
+				ul
+					li
+						a(href="modules/callout.html") Callout
+					li
+						a(href="modules/revealable.html") Revealable
+					//li
+						a(href="modules/section-notice-dev.html") Section Notice Development
+					li
+						a(href="modules/toolbar.html") Content toolbar
+					li
+						a(href="modules/sticky.html") Sticky box
+					//li
+						a(href="modules/overlay.html") Modal/Overlay
 
-			.index-row-2
-				.index-col
-					h3#Features(style="margin-top: 0;") Features
-					ul
-						li
-							a(href="features/section-notice.html") Section Notices
-						li
-							a(href="features/site-notice.html") Website Notice
-						li
-							a(href="features/cookie-monster.html") Cookie Monster
-						li
-							a(href="features/browser-warning.html") Browser warning
-						li
-							a(href="features/extent.html") Extent Switcher
-						//li
-							a(href="modules/reference.html") Reference tool
+			.col-md-4.col-sm-6
+				h3#Features(style="margin-top: 0;") Features
+				ul
+					li
+						a(href="features/section-notice.html") Section Notices
+					li
+						a(href="features/site-notice.html") Website Notice
+					li
+						a(href="features/cookie-monster.html") Cookie Monster
+					li
+						a(href="features/browser-warning.html") Browser warning
+					li
+						a(href="features/extent.html") Extent Switcher
+					//li
+						a(href="modules/reference.html") Reference tool
 
+			.col-md-4.col-sm-6
+				h3#Navigation(style="margin-top: 0;") Navigation
+				ul
+					li
+						a(href="navigation/blocklinks.html") Block links
+					li
+						a(href="navigation/breadcrumbs.html") Breadcrumbs
+					li
+						a(href="navigation/sidebar.html") Sidebar navigation
+					li
+						a(href="navigation/footer.html") Footer navigation
 
-				.index-col
-					h3#Navigation(style="margin-top: 0;") Navigation
-					ul
-						li
-							a(href="navigation/blocklinks.html") Block links
-						li
-							a(href="navigation/breadcrumbs.html") Breadcrumbs
-						li
-							a(href="navigation/sidebar.html") Sidebar navigation
-						li
-							a(href="navigation/footer.html") Footer navigation
-
-					h3#Branding Branding
-					ul
-						li
-							a(href="branding/brand-icons.html") Brand icons
-						//li
-							a(href="branding/cards.html") Cards
-						li
-							a(href="branding/speech-line.html") Speech line
+			.col-md-4.col-sm-6
+				h3#Branding(style="margin-top: 0;") Branding
+				ul
+					li
+						a(href="branding/brand-icons.html") Brand icons
+					//li
+						a(href="branding/cards.html") Cards
+					li
+						a(href="branding/speech-line.html") Speech line
