fix: Gave toolbar links a white bottom border when not on hover This fixed an issue that was causing the content to jump one pixel when the bottom border appeared on hover

--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -193,14 +193,14 @@
     //line-height: 2.5rem;
     display: inline-block;
     padding: 0 0.45em 0 0;
-    border-bottom: 0;
+    border-bottom-color: @white;
     font-size: 125%;
     position: relative;
     bottom: -0.125em; //shift baseline of icons slightly down
 }
 
 .info-reviewed {
-    border-bottom: 0;
+    border-bottom-color: @white;
     margin-right: .9em;
     display: inline-block;
     &:before {
@@ -210,7 +210,7 @@
     }
 }
 .info-owner {
-    border-bottom: 0;
+    border-bottom-color: @white;
     margin-right: .9em;
     display: inline-block;
     &:before {
@@ -220,7 +220,7 @@
     }
 }
 .info-extent {
-    border-bottom: 0;
+    border-bottom-color: @white;
     margin-right: .9em;
     display: inline-block;
     &:before {
@@ -230,7 +230,7 @@
     }
 }
 .a-social-print {
-    border-bottom: 0;
+    border-bottom-color: @white;
     margin-right: .9em;
     &:before {
         content: @i-print;
@@ -240,7 +240,7 @@
     }
 }
 .a-social-references {
-    border-bottom: 0;
+    border-bottom-color: @white;
     margin-right: .9em;
     &:before {
         content: @i-star;
@@ -250,7 +250,7 @@
     }
 }
 .a-social-email {
-    border-bottom: 0;
+    border-bottom-color: @white;
     margin-right: .9em;
     &:before {
         content: @i-email;
