add: Created a grey content banner

--- a/libs/modules/landing.less
+++ b/libs/modules/landing.less
@@ -13,6 +13,11 @@
 	clear: both;
 }
 
+.fullwidth-gray {
+	background-color: @gray-8;
+	clear: both;
+}
+
 .fullwidth-content {
     .limit-width(@breakpoint-lg);
     margin: 0 auto;
