--- a/libs/jade/dev/blog/blog-jobs-1.jade
+++ b/libs/jade/dev/blog/blog-jobs-1.jade
@@ -1,5 +1,5 @@
 block settings
-	- var title = "Work at Citizens Advice"
+	- var title = "Join the digital team"
 	//- var sidebar = true
 	- var dir = "../../"
 	- var blog = true
@@ -18,71 +18,22 @@ block content
 				h1.title__heading.js-ref
 					span.title__title #{title}
 			.flex-row
-				.col-sm-6
-					p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+				.col-md-6.col-sm-6
+					p #[strong “We design content and tools to help the most vulnerable in society - who face increasing problems in today&#39;s world.”]
 
-					h2(style="margin-top: 0;") Do work that changes lives
-					p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euimdod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+					p That’s what one person said when we asked our digital team what it’s like to work at Citizens Advice recently, and it sums up why we think the team is so special. Our work can make a real difference to people at difficult times in their lives. We help people solve problems - and, as another person put it, we are “doing something with a positive social purpose, not just aimed at achieving more traffic or selling things.”
 
-				.col-sm-6
-					p(style="position: relative;padding-bottom: 56.25%; padding-top: 25px;height: 0;")
-						iframe(src="https://www.youtube.com/embed/jtLJKyNLV_E", frameborder="0", allowfullscreen, style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;")
+					p Citizens Advice is doing important digital work: we are designing content and tools for challenges that haven’t been solved before, like helping people fill out claim forms for Personal Independence Payment or Employment and Support Allowance.
 
-	.fullwidth-aqua
-		.fullwidth-content
-			.flex-row
-				.col-sm-6
-					.stats
-						.i-brand &#xe96d;
-						h3 22,000,000
-						p visitors per&nbsp;year
-					.stats
-						.i-brand &#xe993;
-						h3 404,500
-						p page views per&nbsp;day
-				.col-sm-6
-					div(style="display: block; position: relative;")
-						.speech-lines-teal
-							h3 An example of a quote in a report when the speech line should be used instead of the speech bubble
-							p.cite Dommink Preri, Designa
-							.box-speech-line(style="background-color:#b8e3df;")
+					p Our team is collaborative. Join us and you’ll get the chance to:
 
-	.fullwidth(style="background-color:#f2f2f2;")
-		.fullwidth-content
-			//.title
-				h2 Benefits of Citizens Advice
-			.flex-row
-				.col-sm-3
-					h3 Flexible working
-					.blog-lead
-						.blog-name
-							p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euimdod tincidunt ut laoreet dolore magna aliquam erat volutpat. 
+					p work in a multi-disciplinary team, learning from your colleagues and other parts of the organisation take part in user research and testing, seeing the difference your work can make to real people. We work in an experimental, agile way - it’s okay to fail fast and learn early from any mistakes.
 
-				.col-sm-1
-				.col-sm-3
-					h3 Supportive environment
-					.blog-lead
-						.blog-name
-							p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euimdod tincidunt ut laoreet dolore magna aliquam erat volutpat. 
-				.col-sm-1
-				.col-sm-3
-					h3 Great rewards
-					.blog-lead
-						.blog-name
-							p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euimdod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-				.col-sm-1
+				.col-md-1.col-sm-1
 
+				.col-md-5.col-sm-5(style="background-color: #F2F2F2; padding: 1rem;")
+					h3(style="margin-top: 0;") Available roles
 
-	.fullwidth-yellow
-		.fullwidth-content
-			//h2 Positions
-			.flex-row
-				//.col-sm-6
-					h3 How to apply
-					p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
-
-				.col-sm-8
-					h3 Available roles
 					section.revealable
 						h3 Content Design
 						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
@@ -92,3 +43,49 @@ block content
 					section.revealable
 						h3 Research
 						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
+
+	.fullwidth-aqua
+		.fullwidth-content
+			.flex-row
+				.col-md-5
+					.stats
+						.i-brand &#xe96d;
+						h3  1.9 million
+						p people helped with 5.6 million issues by our local Citizens Advice network
+					.stats
+						.i-brand &#xe993;
+						h3 20.7 million
+						p people assisted via our website
+				.col-md-1
+				.col-md-6
+					div(style="display: block; position: relative;")
+						.speech-lines-teal
+							h3(style="margin-top: 0;") Very detailed information on the subject matter and excellent specific information on different types of outcomes on the subject. Very good service.
+							p.cite Tracey
+							.box-speech-line(style="background-color:#b8e3df;")
+
+	.fullwidth-gray
+		.fullwidth-content
+			.flex-row
+				.col-sm-12
+					p(style="position: relative;padding-bottom: 56.25%; padding-top: 25px;height: 0;")
+						iframe(src="https://www.youtube.com/embed/jtLJKyNLV_E", frameborder="0", allowfullscreen, style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;")
+
+	.fullwidth
+		.fullwidth-content
+			.flex-row
+				.col-sm-3
+					h3(style="margin-top: 0;") Flexible working
+					.blog-lead
+						.blog-name
+							p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euimdod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+
+				.col-sm-1
+				.col-sm-3
+					h3(style="margin-top: 0;") Supportive environment
+					.blog-lead
+						.blog-name
+							p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euimdod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				.col-sm-1
+				.col-sm-4
+					img(src="#{dir}/images/charity-times-winner.jpg", style="max-height: 200px;")
