--- a/libs/jade/dev/site/webchat-example.jade
+++ b/libs/jade/dev/site/webchat-example.jade
@@ -21,7 +21,7 @@ html.no-js
 				.content(style="text-align: left !important; padding: 10px !important;")
 					img.wide(src="../../images/ca-logo-hz-280px.svg" style="text-align: left !important; max-width: 180px !important;")
 
-		aside(class="main-content__sidebar side-chat" style="max-width:400px; padding: 10px !important; margin-top: 10px !important;" id="agilisys-engage-webchat")
+		aside(class="" style="max-width:400px; padding: 10px !important; margin-top: 10px !important;" id="agilisys-engage-webchat")
 			
 			p Need help now?
 			p Chat on-line to one of our advisers.
