dev:change: Added generic cite to quote

--- a/libs/jade/dev/blog/blog-jobs-1.jade
+++ b/libs/jade/dev/blog/blog-jobs-1.jade
@@ -60,8 +60,8 @@ block content
 				.col-md-6
 					div(style="display: block; position: relative;")
 						.speech-lines-teal
-							h3(style="margin-top: 0;") Very detailed information on the subject matter and excellent specific information on different types of outcomes on the subject. Very good service.
-							p.cite Tracey
+							h3(style="margin-top: 0;") Excellent information. Clear, practical advice. Thank you.
+							p.cite Website user
 							.box-speech-line(style="background-color:#b8e3df;")
 
 	.fullwidth-gray
