dev:change: Added a form to sign up for alerts on the jobs page

--- a/libs/jade/dev/blog/blog-jobs-1.jade
+++ b/libs/jade/dev/blog/blog-jobs-1.jade
@@ -44,6 +44,12 @@ block content
 						h3 Research
 						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
 
+					h3 Job alerts by email
+					fieldset
+						.field-group.field-group--buttons
+							input(type="text", placeholder="Email")
+							button.btn.btn-primary Go
+
 	.fullwidth-aqua
 		.fullwidth-content
 			.flex-row
